docs: update outdated content across all six doc files
implement-a-customized-actuator (EN+ZH):
- Fix test lifecycle: @Before/@After → @BeforeClass/@AfterClass so the
  Spring context is created only once per test class, not per test method
- Fix Args initialization order: Args.setParam() must be called before
  Args.getInstance() to avoid passing a stale unconfigured instance to
  appTest.initServices()
- Replace hardcoded dbPath with @ClassRule TemporaryFolder to keep
  test directories isolated and auto-cleaned
- Add @Rule Timeout to guard against hangs
- Remove the specific protoc v3.4.0 version note; point readers to the
  version declared in build.gradle instead

modular-deployment (EN+ZH):
- Replace CMS GC flags (-XX:+UseConcMarkSweepGC, -XX:+CMSParallelRemarkEnabled,
  -XX:+CMSScavengeBeforeRemark) that were removed in JDK 14 and would
  cause startup failures on JDK 17 (required for ARM64)
- Add -Xms/-Xmx to the example and note JDK 8/17 compatibility

modular-introduction (EN+ZH):
- Update module count from six to eight
- Add descriptions for the crypto and plugins modules

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>