@@ -45,12 +45,11 @@ java-tron-1.0.0/bin/FullNode -c config.conf -w
 
 JVM options can also be specified, located in `bin/java-tron.vmoptions`:
 ```
-# demo
--XX:+UseConcMarkSweepGC
+# demo (compatible with JDK 8 / JDK 17)
+-Xms256m
+-Xmx4g
 -XX:+PrintGCDetails
 -Xloggc:./gc.log
 -XX:+PrintGCDateStamps
--XX:+CMSParallelRemarkEnabled
 -XX:ReservedCodeCacheSize=256m
--XX:+CMSScavengeBeforeRemark
 ```
