@@ -43,12 +43,11 @@ java-tron-1.0.0/bin/FullNode -c config.conf -w
 
 java-tron 支持对 jvm 参数进行配置，配置文件为 bin 目录下的 java-tron.vmoptions 文件。
 ```
-# demo
--XX:+UseConcMarkSweepGC
+# demo（兼容 JDK 8 / JDK 17）
+-Xms256m
+-Xmx4g
 -XX:+PrintGCDetails
 -Xloggc:./gc.log
 -XX:+PrintGCDateStamps
--XX:+CMSParallelRemarkEnabled
 -XX:ReservedCodeCacheSize=256m
--XX:+CMSScavengeBeforeRemark
 ```
